--- a/README.rdoc
+++ b/README.rdoc
@@ -1,17 +1,7 @@
 = cherrybase
 
-Description goes here.
+Git cherry-pick a range of commits from a another branch into your current branch
 
-== Note on Patches/Pull Requests
- 
-* Fork the project.
-* Make your feature addition or bug fix.
-* Add tests for it. This is important so I don't break it in a
-  future version unintentionally.
-* Commit, do not mess with rakefile, version, or history.
-  (if you want to have your own version, that is fine but bump version in a commit by itself I can ignore when I pull)
-* Send me a pull request. Bonus points for topic branches.
+== Normal Cherrypickn' Workflow
 
-== Copyright
 
-Copyright (c) 2009 born2snipe. See LICENSE for details.
